--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "swiped-events": "^1.1.6",
     "three": "^0.139.0",
     "vercel": "^23.1.2",
-    "webpack": "^5.21.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.2"
   }
 }
